# arxiv-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: arxiv-client-flow.md  cache-layout.md  fetch-pipeline.md  gradio-workflow.md  interview-notes.md  pdf-preference-analysis.md  rag-principles.md
paper_datasets/: README.md
src/arxiv_agent/: __init__.py  __main__.py  cli.py  config.py  models.py
src/arxiv_agent/clients/: __init__.py  arxiv_client.py  embedding_client.py  siliconflow_client.py
src/arxiv_agent/services/: __init__.py  digest_service.py  preference_service.py  rag_service.py  recommendation_service.py
src/arxiv_agent/storage/: __init__.py  markdown_store.py  preference_store.py  recommendation_store.py
src/arxiv_agent/ui/: __init__.py  gradio_app.py  renderers.py  styles.py
